deploy/podinfo/podinfo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 9898
      targetPort: 9898
      protocol: TCP
      name: http
  selector:
    app: podinfo
