deploy/podinfo/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/issuer: letsencrypt-prod
spec:
  tls:
    - secretName: ingress-certificate
      hosts:
        - training-user-1.training.weave.works
  rules:
    - host: training-user-1.training.weave.works
      http:
        paths:
          - path: /podinfo
            backend:
              serviceName: podinfo
              servicePort: 9898
